--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -7,7 +7,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 @layer base {
     body {
         @apply font-exo;
@@ -25,7 +24,7 @@
         @apply text-body mb-4 last:mb-0;
     }
     h1 {
-        @apply font-sans text-xl sm:text-2xl md:text-2xl lg:text-3xl xl:text-4xl;
+        @apply font-sans-bold text-xl sm:text-2xl md:text-2xl lg:text-3xl xl:text-4xl;
     }
     h2 {
         @apply text-28base sm:text-32base md:text-xl xl:text-lg;
